[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/buttons/ToolButton.gd" type="Script" id=1]
[ext_resource path="res://shaders/hue_adjust.shader" type="Shader" id=2]
[ext_resource path="res://assets/images/buttons/tool_highlight.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/hue = 0.0
shader_param/saturation = 0.0
shader_param/value = 0.0

[node name="ToolButton" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -56.0
margin_right = 56.0
margin_bottom = 56.0
rect_min_size = Vector2( 112, 112 )
script = ExtResource( 1 )

[node name="ButtonHighlight" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 0.85, 0.85 )
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="ButtonHighlight"]

[node name="ButtonBase" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonColor" type="TextureRect" parent="ButtonBase"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="pressed" from="ButtonBase" to="." method="_on_button_pressed"]
